# digiAnalysis

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Analysis.cpp.0199F7926D5CD4DA.idx  Analysis.h.27E0956E2B05B261.idx  Events.cpp.CEB6C07F6A1F936A.idx  Events.h.C5771060DD3FC0BB.idx  PSBar.cpp.8A99DC728853EE2D.idx  PSBar.h.C53118CDE3158427.idx  Test_Dummy.cpp.4344B620A0D2FC6B.idx  WaveForm.cpp.F519332E11306C7F.idx  WaveForm.h.F91E09A7DDF373A8.idx  diffWaveForm.cpp.D920F144EA00EDC8.idx  diffWaveFrom.h.318AA551BEA20D8B.idx  globals.cpp.F90D3A14FE2CBB2F.idx  globals.h.12169E61A9295F82.idx  includes.hh.BBE86C1D5379315D.idx  singleHits.cpp.5F4E726A14363713.idx  singleHits.h.DEA05AA7B898283A.idx
inc/: Analysis.h  DictLinkDef.h  Events.h  PSBar.h  Pair.h  WaveForm.h  diffWaveFrom.h  globals.h  includes.hh  singleHits.h
src/: Analysis.cpp  Events.cpp  PSBar.cpp  Pair.cpp  WaveForm.cpp  globals.cpp  singleHits.cpp
test/: Test_BaselineCrossCorrelation.cpp  Test_BaselineVar.cpp  Test_Clean.cpp  Test_Coincidence.cpp  Test_CrossCorrelation.cpp  Test_DecayTime.cpp  Test_Directionality.cpp  Test_Dummy.cpp  Test_EvaluateBaselineShift.cpp  Test_Gabor.cpp  Test_MakePairs.cpp  Test_MeanTimePlot.cpp  Test_MultiChannelCoincidence.cpp  Test_NaI_LowE.cpp  Test_NormalizeWF.cpp  Test_PeakDetect.cpp  Test_RemoveCorrBL.cpp  Test_SPE.cpp  Test_SPEAnalysis.cpp  Test_SPEFit.cpp  Test_SPE_NaI.cpp  Test_SPEinTail.cpp  Test_SavePairs.cpp  Test_SaveSPEWaveForms.cpp  Test_SmoothMovBL.cpp  Test_ViewWaveForms.cpp
